API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

09-Jan-1999
	Various API bug fixes.
	Added naviation support for all module types
	Added search support for all module types
	Added standard mods.conf location lookups to SWMgr

15-Dec-1999
	Added cheatah, a simple lookup and search gtk GUI

12-Nov-1998
	1.3.1 release.
	Started making entries in ChangeLog again! :)
	Moved directory structure.
	Added Luis Cortes' wxSword frontend to apps tree. GREAT START!
	Fixed bug in canon.h that incorrectly assumed static structures were
		allocated on the heap sequential if they were in the source 
		sequentially.
	Changed SWModule::Search(char *... to SWModule::Search(const char *
	Removed -Werror from Makefile.cfg to avoid problems with different
		warnings that get displayed with different versions of egcs
	
12-Dec-1997
	Fixed typo in about box of BibleCS
	Changed font copyright notice in n27u4

09-Dec-1997
	Fixed Search window in BibleCS to search currently focused Bible Text module
		and report such in the title bar.
	Added ALPHA website to the CD Loader
	Added a full report of the About section of a module when installing. (BibleCS)
	Renamed module n26u4 to n27u4.

04-Dec-1997
	Added DDE to BibleCS frontend.  Thanx to Franklin Bratcher for the idea.
		Service = sword; Topic = Bible;
		Item = [Lookup|Search]; Data = "<module name> <arg>".  E.g.:
			sword Bible Lookup MHC "Matthew 1:1"
			sword Bible Search WEB knee[ls]
		WARNING: case sensitive module names
		See ddetest program under BibleCS directory
		
29-Nov-1997
	Added SWFilter and modified appropriate modules to use these.
	Added RawGBF class that automatically adds a GBFPlain filter to
		strip GBF tags before searching.
	Added sword/frontend/windoze/cbuilder/biblecs frontend.  To build, use cmdline
		compiler: make -fsword  DO NOT OPEN sword.mak WITH C++BUILDER
	Added sword/frontend/windoze/cbuilder/biblecs/cdstartup for autorun
		CDROMs.
	Made some functions const.