@@ -1,4 +1,4 @@
-The SWORD Project is under the GNU GPL as stated below.
+The SWORD Project is copyrighted under the GNU GPL as stated below.
 Note: The GNU GPL is copyrighted by the Free Software Foundation, Inc.,
 but the SWORD Project is copyrighted by the members of the SWORD Project
 team and Corporately under:
