@@ -1,6 +1,6 @@
 /*
  *
- * $Id: gbfstrongs.h,v 1.1 1999/05/04 22:03:36 scribe Exp $
+ * $Id: gbfstrongs.h,v 1.2 1999/05/14 17:21:48 scribe Exp $
  *
  * Copyright 1998 CrossWire Bible Society (http://www.crosswire.org)
  *	CrossWire Bible Society
@@ -28,12 +28,14 @@ class GBFStrongs : public SWFilter {
 	static const char on[];
 	static const char off[];
 	static const char optName[];
+	static const char optTip[];
 	OptionsList options;
 public:
 	GBFStrongs();
 	virtual ~GBFStrongs();
 	virtual char ProcessText(char *text, int maxlen = -1);
 	virtual const char *getOptionName() { return optName; }
+	virtual const char *getOptionTip() { return optTip; }
 	virtual void setOptionValue(const char *ival);
 	virtual const char *getOptionValue();
 	virtual OptionsList getOptionValues() { return options; }
