@@ -2,7 +2,7 @@
  *  swmgr.h   - definition of class SWMgr used to interact with an install
  *				base of sword modules.
  *
- * $Id: swmgr.h,v 1.1 1999/05/04 22:03:36 scribe Exp $
+ * $Id: swmgr.h,v 1.4 1999/06/02 06:58:04 scribe Exp $
  *
  * Copyright 1998 CrossWire Bible Society (http://www.crosswire.org)
  *	CrossWire Bible Society
@@ -45,8 +45,6 @@ private:
 	void SWMgr::DeleteMods();
 	FilterMap optionFilters;
 	SWFilter *gbfplain;
-	char *prefixPath;
-	char *configPath;
 	char configType;	// 0 = file; 1 = directory
 
 protected:
@@ -66,13 +64,18 @@ public:
 	SWConfig *config;
 	SWConfig *sysconfig;
 	ModMap Modules;
+	char *prefixPath;
+	char *configPath;
 
 	SWMgr(SWConfig *iconfig = 0, SWConfig *isysconfig = 0, bool autoload = true);
+	SWMgr(const char *iConfigPath, bool autoload = true);
+	void init();
 	virtual ~SWMgr();
 	virtual void InstallScan(const char *dir);
 	virtual void Load();
 	virtual void setGlobalOption(const char *option, const char *value);
 	virtual const char *getGlobalOption(const char *option);
+	virtual const char *getGlobalOptionTip(const char *option);
 	virtual OptionsList getGlobalOptions();
 	virtual OptionsList getGlobalOptionValues(const char *option);
 };
