@@ -1,0 +1,16 @@
+[WEB]
+DataPath=/usr/local/lib/sword/modules/texts/rawgbf/web/
+ModDrv=RawGBF
+Description=The World English Bible
+About= -=+* see the file 'info.txt' for more details *+=-\par\par \
+\qc The World English Bible (WEB) \par\par Public Domain \par\par \pard \
+	The World English Bible is a 1997 revision of the American Standard Version of the \
+Holy Bible, first published in 1901. It is in the Public Domain. Please feel free to copy \
+and distribute it freely. \par\par \
+	Thank you to Michael Paul Johnson for making this work available.  For the latest \
+information, to report corrections, or for other correspondence: \par\par \
+	Michael Paul Johnson \par \
+	http://www.ebible.org/bible \par \
+	mpj@ebible.org
+
+
