@@ -1,3 +1,24 @@
+/******************************************************************************
+ *  filemgr.cpp	- implementation of class FileMgr used for pooling file handles
+ *
+ * $Id: filemgr.cpp,v 1.2 1999/05/04 22:50:30 scribe Exp $
+ *
+ * Copyright 1998 CrossWire Bible Society (http://www.crosswire.org)
+ *	CrossWire Bible Society
+ *	P. O. Box 2528
+ *	Tempe, AZ  85280-2528
+ *
+ * This program is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published by the
+ * Free Software Foundation version 2.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ */
+
 #include <filemgr.h>
 #include <utilstr.h>
 #include <fcntl.h>
