@@ -1,8 +1,30 @@
+/******************************************************************************
+ *  swconfig.cpp   - implementation of Class SWConfig used for saving and
+ *			retrieval of configuration information
+ *
+ * $Id: swconfig.cpp,v 1.3 1999/06/02 06:58:04 scribe Exp $
+ *
+ * Copyright 1998 CrossWire Bible Society (http://www.crosswire.org)
+ *	CrossWire Bible Society
+ *	P. O. Box 2528
+ *	Tempe, AZ  85280-2528
+ *
+ * This program is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published by the
+ * Free Software Foundation version 2.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ */
+
 #include <swconfig.h>
 #include <utilfuns.h>
 
 
-SWConfig::SWConfig(string ifilename) {
+SWConfig::SWConfig(const char * ifilename) {
 	filename = ifilename;
 	Load();
 }
