@@ -1,3 +1,25 @@
+/******************************************************************************
+ *  swmgr.cpp   - implementaion of class SWMgr used to interact with an install
+ *				base of sword modules.
+ *
+ * $Id: swmgr.cpp,v 1.6 1999/06/05 23:32:02 scribe Exp $
+ *
+ * Copyright 1998 CrossWire Bible Society (http://www.crosswire.org)
+ *	CrossWire Bible Society
+ *	P. O. Box 2528
+ *	Tempe, AZ  85280-2528
+ *
+ * This program is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published by the
+ * Free Software Foundation version 2.
+ *
+ * This program is distributed in the hope that it will be useful, but
+ * WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ */
+
 #include <dirent.h>
 #include <stdio.h>
 #include <stdlib.h>
@@ -25,13 +47,22 @@
 #include <rawfiles.h>
 
 
-SWMgr::SWMgr(SWConfig *iconfig, SWConfig *isysconfig, bool autoload) {
-	configPath = 0;
-	prefixPath = 0;
+void SWMgr::init() {
+	configPath  = 0;
+	prefixPath  = 0;
+	configType  = 0;
+	myconfig    = 0;
+	mysysconfig = 0;
 
 	optionFilters.insert(FilterMap::value_type("GBFStrongs", new GBFStrongs()));
 	optionFilters.insert(FilterMap::value_type("GBFFootnotes", new GBFFootnotes()));
 	gbfplain = new GBFPlain();
+}
+
+
+SWMgr::SWMgr(SWConfig *iconfig, SWConfig *isysconfig, bool autoload) {
+
+	init();
 	
 	if (iconfig) {
 		config   = iconfig;
@@ -45,6 +76,36 @@ SWMgr::SWMgr(SWConfig *iconfig, SWConfig *isysconfig, bool autoload) {
 	else sysconfig = 0;
 
 	if (autoload)
+		Load();
+}
+
+
+SWMgr::SWMgr(const char *iConfigPath, bool autoload) {
+
+	string path;
+	
+	init();
+	
+	path = iConfigPath;
+	path += "/";
+	if (existsFile(path.c_str(), "mods.conf")) {
+		stdstr(&prefixPath, path.c_str());
+		path += "mods.conf";
+		stdstr(&configPath, path.c_str());
+	}
+	else {
+		if (existsDir(path.c_str(), "mods.d")) {
+			stdstr(&prefixPath, path.c_str());
+			path += "mods.d";
+			stdstr(&configPath, path.c_str());
+			configType = 1;
+		}
+	}
+
+	config = 0;
+	sysconfig = 0;
+
+	if (autoload && configPath)
 		Load();
 }
 
@@ -210,13 +271,19 @@ void SWMgr::loadConfigDir(const char *ipath)
 			}
 		}
 		closedir(dir);
+		if (!config) {	// if no .conf file exist yet, create a default
+			newmodfile = ipath;
+			newmodfile += "/globals.conf";
+			config = myconfig = new SWConfig(newmodfile.c_str());
+		}
 	}
 }
 
 
 void SWMgr::Load() {
-	if (!config) {	// If we weren't passes a config object at construction, find a config file
-		findConfig();
+	if (!config) {	// If we weren't passed a config object at construction, find a config file
+		if (!configPath)	// If we weren't passed a config path at construction...
+			findConfig();
 		if (configPath) {
 			if (configType)
 				loadConfigDir(configPath);
@@ -245,7 +312,7 @@ void SWMgr::Load() {
 		CreateMods();
 	}
 	else {
-		fprintf(stderr, "SWMgr: Can't find 'mods.conf' or 'mods.d'.  Try setting:\n\tSWORD_PATH=<directory containing mods.conf>\n\tOr see the README file for a full description of setup options");
+		SWLog::systemlog->LogError("SWMgr: Can't find 'mods.conf' or 'mods.d'.  Try setting:\n\tSWORD_PATH=<directory containing mods.conf>\n\tOr see the README file for a full description of setup options (%s)", configPath);
 		exit(-1);
 	}
 }
@@ -478,6 +545,16 @@ const char *SWMgr::getGlobalOption(const char *option)
 	for (FilterMap::iterator it = optionFilters.begin(); it != optionFilters.end(); it++) {
 		if (!stricmp(option, (*it).second->getOptionName()))
 			return (*it).second->getOptionValue();
+	}
+	return 0;
+}
+
+
+const char *SWMgr::getGlobalOptionTip(const char *option)
+{
+	for (FilterMap::iterator it = optionFilters.begin(); it != optionFilters.end(); it++) {
+		if (!stricmp(option, (*it).second->getOptionName()))
+			return (*it).second->getOptionTip();
 	}
 	return 0;
 }
